Adelanto de las instrucciones del juego (Valery-Camila)

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
     </style>
 
     <style name="Theme.PicoBotella7" parent="Base.Theme.PicoBotella7" />
+
+    <style name="toolbarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:colorControlNormal">@color/white</item>
+        <item name="titleTextColor">@color/white</item>
+
+
+    </style>
+
 </resources>
