--- a/app/src/main/res/layout/fragment_game_instructions.xml
+++ b/app/src/main/res/layout/fragment_game_instructions.xml
@@ -41,11 +41,14 @@
                 android:id="@+id/textView"
                 android:layout_width="353dp"
                 android:layout_height="118dp"
+                android:layout_marginTop="144dp"
                 android:text="@string/text_how_to_play"
                 android:textColor="@color/white"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="30dp"
-                tools:layout_editor_absoluteY="139dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.517"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline3"
@@ -57,49 +60,62 @@
                 android:id="@+id/textView2"
                 android:layout_width="145dp"
                 android:layout_height="35dp"
+                android:layout_marginTop="104dp"
                 android:text="@string/question_how_to_play"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="30dp"
-                tools:layout_editor_absoluteY="104dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.112"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="117dp"
                 android:layout_height="29dp"
+                android:layout_marginTop="260dp"
                 android:text="@string/question_who_wins"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="30dp"
-                tools:layout_editor_absoluteY="258dp" />
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.102"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="351dp"
                 android:layout_height="40dp"
+                android:layout_marginTop="288dp"
                 android:text="@string/text_who_wins"
                 android:textColor="@color/white"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="30dp"
-                tools:layout_editor_absoluteY="287dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.533"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottieBottleAnimation"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="295dp"
+                android:layout_height="395dp"
+                android:layout_marginTop="316dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.49"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:lottie_autoPlay="true"
-                app:lottie_rawRes="@raw/winanimation"
                 app:lottie_loop="true"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="36dp" />
+                app:lottie_rawRes="@raw/winanimation"
+                tools:ignore="MissingConstraints" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </FrameLayout>>
+    </FrameLayout>
 
 
 
