--- a/app/src/main/res/layout/fragment_game_instructions.xml
+++ b/app/src/main/res/layout/fragment_game_instructions.xml
@@ -9,6 +9,7 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/InstructionsView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.fragment.GameInstructions"
