--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 <!--        android:id="@+id/fragmentContainerStatic"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
-<!--        android:name="com.example.picobotella7.view.fragment.HomeFragment"-->
-<!--        tools:layout="@layout/fragment_home"-->
+<!--        android:name="com.example.picobotella7.view.fragment.Toolbar"-->
+<!--        tools:layout="@layout/fragment_toolbar"-->
 <!--        app:layout_constraintBottom_toBottomOf="parent"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
