--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,5 +6,13 @@
     <fragment
         android:id="@+id/homeFragment2"
         android:name="com.example.picobotella7.view.fragment.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment2_to_gameInstructions"
+            app:destination="@id/gameInstructions" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameInstructions"
+        android:name="com.example.picobotella7.view.fragment.GameInstructions"
+        android:label="GameInstructions" />
 </navigation>
