--- a/app/src/main/res/layout/fragment_toolbar.xml
+++ b/app/src/main/res/layout/fragment_toolbar.xml
@@ -62,6 +62,7 @@
                         android:background="?selectableItemBackgroundBorderless" />
 
                     <ImageView
+                        android:id="@+id/challengesButtonView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/baseline_add_circle_24"
