--- a/app/src/main/res/layout/fragment_list_challenges.xml
+++ b/app/src/main/res/layout/fragment_list_challenges.xml
@@ -50,6 +50,28 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"/>
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fbagregar"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:contentDescription="button add"
+                android:layout_marginRight="16dp"
+                android:backgroundTint="#FF3D00"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/ic_add"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
 
 
 
