--- a/app/src/main/res/layout/layout_update_dialog.xml
+++ b/app/src/main/res/layout/layout_update_dialog.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Agregar Reto"
+        android:text="Editar Reto"
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="center"/>
@@ -31,7 +31,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/buttonCancel"
+            android:id="@+id/buttonCancelar"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:backgroundTint="#FF3D00"
@@ -45,10 +45,10 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <Button
-            android:id="@+id/buttonSave"
+            android:id="@+id/buttonSalvar"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:backgroundTint="#A19D9C"
+            android:backgroundTint="#FF3D00"
             android:enabled="true"
             android:text="Guardar"
             android:textColor="#FFFFFF"
