--- a/app/src/main/res/layout/layout_add_dialog.xml
+++ b/app/src/main/res/layout/layout_add_dialog.xml
@@ -34,6 +34,9 @@
             android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:shape="rectangle"
+            android:radius="10dp"
+            android:background="@drawable/button_background"
             android:backgroundTint="#FF3D00"
             android:text="Cancelar"
             android:textColor="#FFFFFF"
@@ -48,8 +51,11 @@
             android:id="@+id/buttonSave"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:backgroundTint="#A19D9C"
+            android:background="@drawable/button_background"
+            android:shape="rectangle"
+            android:radius="10dp"
             android:enabled="true"
+
             android:text="Guardar"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
