--- a/app/src/main/res/layout/layout_delete_dialog.xml
+++ b/app/src/main/res/layout/layout_delete_dialog.xml
@@ -32,9 +32,10 @@
             android:id="@+id/buttonNo"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:backgroundTint="#FF3D00"
+
+            android:backgroundTint="@color/white"
             android:text="No"
-            android:textColor="#FFFFFF"
+            android:textColor="#FF3D00"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.324"
@@ -46,9 +47,9 @@
             android:id="@+id/buttonSi"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:backgroundTint="#FF3D00"
+            android:backgroundTint="@color/white"
             android:text="Si"
-            android:textColor="#FFFFFF"
+            android:textColor="#FF3D00"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.892"
