--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_enabled="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <corners android:radius="10dp"/>
-            <strok android:width="1dp"/>
-        </shape>
-    </item>
 
-</selector>
+
+    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
+        <solid android:color="#A19D9C" /> <!-- Puedes ajustar el color aquí -->
+        <corners android:radius="8dp" /> <!-- Puedes ajustar el radio de las esquinas aquí -->
+    </shape>
+
