--- a/app/src/main/res/layout/layout_update_dialog.xml
+++ b/app/src/main/res/layout/layout_update_dialog.xml
@@ -10,6 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:text="Editar Reto"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:backgroundTint="#FF3D00"
+            android:background="@drawable/button_background"
             android:text="Cancelar"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +50,7 @@
             android:id="@+id/buttonSalvar"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:background="@drawable/button_background"
             android:backgroundTint="#FF3D00"
             android:enabled="true"
             android:text="Guardar"
