--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -4,7 +4,7 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-        <solid android:color="#A19D9C" /> <!-- Puedes ajustar el color aquí -->
+        <solid android:color="#FF3D00" /> <!-- Puedes ajustar el color aquí -->
         <corners android:radius="8dp" /> <!-- Puedes ajustar el radio de las esquinas aquí -->
     </shape>
 
