--- a/app/src/main/res/layout/dialog_dare.xml
+++ b/app/src/main/res/layout/dialog_dare.xml
@@ -40,11 +40,12 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
+            android:id="@+id/pokemonesImg"
             android:layout_width="100dp"
             android:layout_height="100dp"
             tools:ignore="ContentDescription"
             android:padding="2dp"
-            android:src="@drawable/circulo_fondo"
+            android:background="@drawable/circulo_fondo"
             app:layout_constraintBottom_toTopOf="@+id/cl_contenedor"
             app:layout_constraintEnd_toEndOf="@+id/cl_contenedor"
             app:layout_constraintStart_toStartOf="@+id/cl_contenedor"
